Asap locksmith project complete

--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -1,101 +1,92 @@
-<!-------------------------->
-<!-- Still Working on this -->
-<!-------------------------->
-<!-- Restructuring Navbar here to accomodate Admin View. Not including Services and contact in navbar instead including New Jobs, assign jobs, reports. -->
- <div class="collapse navbar-collapse" id="navbar-collapse">
-         <ul class="nav navbar-nav">
-		          <li><a href="/">HOME</a></li>
-		          <li><a href="/newJobs">NEW JOBS</a></li>
-		          <li ><a id="assign-btn" data-toggle="modal" data-delay = "50" data-target="#assign-modal"> ASSIGN JOB </a></li>
-		          <li><a href="/viewJobs">VIEW JOB</a></li>
-		          <li><a href="/reports">REPORTS</a></li>
-		 </ul>
-				<ul class="nav navbar-nav navbar-right admin-nav">
-							<button type="submit" class="btn btn-primary" id="adminLogin" data-toggle="modal" data-delay = "50" data-target="/">Log Out<i class="fa fa-key" aria-hidden="true"></i></button>
-						</ul>
+<!--Navigation Bar-->
+  <nav class="navbar  navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+     </div>
+     <div class="collapse navbar-collapse" id="navbar-collapse">
+
+      <ul class="nav navbar-nav">
+         <li><a href="/admin">HOME</a></li>
+                  <!-- <li><a href="/api/accept">NEW JOBS</a></li> -->
+         <li> <a href="" class="dropdown-toggle" data-toggle="dropdown">JOBS <b class="caret"></b></a>
+
+             <ul class="dropdown-menu nav navbar-nav" style="top: 53px;background-color: #222">
+                <li ><a href="/api/accept" style="text-decoration: none;">ACCEPT JOBS</a></li>
+                <li><a href="/api/assign">ASSIGN JOBS</a></li>
+                <li><a href="/api/jobs">VIEW JOBS</a></li>
+             </ul>
+         </li>
+         <li> <a href="" class="dropdown-toggle" data-toggle="dropdown">REPORTS <b class="caret"></b></a>
+             <ul class="dropdown-menu nav navbar-nav" style="top: 53px;background-color: #222">
+                <li ><a href="/api/getDate" style="text-decoration: none;"> PERIODIC REPORT</a></li>
+                <li><a href="/api/getDetails">MONTHLY REPORT</a></li>
+             </ul>
+         </li>
+     </ul>
+     <ul class="nav navbar-nav navbar-right admin-nav">
+         <button type="submit" class="btn btn-primary" id="adminLogout" data-toggle="modal" onclick="location.href = '/logout'"> Log Out <i class="fa fa-key" aria-hidden="true"></i></button>
+     </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav> <!--End Nav-->
+
 <!--Webpage Body-->
-<div class="body-webpage">
-	<div class="jumbotron services-jumbotron">
-			<div class="container">
-				<h2 class="service-header">Welcome</h2>
-		      <!-- START THE FEATURETTES -->
-		      <hr class="featurette-divider">
-		      <!-- Collect the nav links, forms, and other content for toggling -->
-		      <div class="collapse navbar-collapse" id="navbar-collapse">
-		       
-						
-		      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-  </nav>
-<!--End Nav-->
-
-		      <div class="row featurette">
-
-		      </div>
-
-		      <hr class="featurette-divider">
-
-
-	</div> <!-- END SERVICES JUMBOTRON-->
-</div> <!-- End WEBPAGE BODY -->
-	
-
-	<!-- assign modal -->
-
-<div class="modal fade" id="assign-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
-	    aria-hidden="true">
-	    <div class="modal-dialog modal-lg">
-	        <div class="modal-content">
-	            <div class="modal-header">
-	                <button type="button" class="close" data-dismiss="modal" aria-hidden="true" style="color: #000">
-	                    ×</button>
-	                <h4 class="modal-title" id="assign-modal-label">
-	                   ASSIGN JOBS </h4>
-	            </div>
-	            <div class="modal-body">
-	                <div class="row reg-body">
-											<div class="col-md-12">
-												<form class="full-services-form">
-												  <div class="form-group">
-												    <label for="inputClient">Job ID</label>
-												    <input type="text" class="form-control assign-form" id="inputClient" placeholder="">
-												  </div>
-												  <div class="form-group">
-                                                  <label for="exampleTextarea">Job Details</label>
-                                                  <textarea class="form-control" id="exampleTextarea"   rows="3"></textarea>
-                                                    </div>
-													
-													<div class="form-group">
-											      <label for="selService"> Skill Set</label>
-											      <select class="form-control chosen-select" id="assign" name="assign">
-															<option value=""></option>
-											        <option value="Residential">Residential</option>
-											        <option value="Automotive">Automotive</option>
-											        <option value="Commercial">Commercial</option>
-											      </select>
-											    </div>
-													<div class="form-group">
-											      <label for="selSpecific"> Technicians </label>
-											      <select class="form-control chosen-select" id="specific" name="specific">
-															<option value=""></option>
-											        <option value="Residential">Residential</option>
-											        <option value="Automotive">Automotive</option>
-											        <option value="Commercial">Commercial</option>
-											      </select>											    </div>
-													<div class="row">
-															<div class="col-sm-10">
-																	<button type="button" class="btn btn-primary btn-sm" id="submitRequest" data-dismiss="modal">
-																			Assign</button>
-																	
-															</div>
-													</div>
-												</form>
-											</div>
-	                </div> <!--End Row-->
-	            </div> <!--End Modal Body-->
-	        </div><!--End Modal Content-->
-	    </div> <!--End Modal Dialogue-->
-	</div> <!--End Modal-->
+  <div class="body-webpage admin-page">
+    <div class="jumbotron admin-jumbo">
+      <div class="container">
+        <h1 class="admin-header">Get Started</h1>
+      </br>
+        <p class="admin-text">
+          Start with the 'Jobs' tab. Accept or deny new job requests coming in, update an ongoing request, or view all jobs with the assigned technicians whether complete or incomplete. Then head over to the reports tab to get a weekly or monthly report of all the requests based on your selection of dates.
+        </p>
+      </div>
+    </div>
+    <div class="container admin-cont">
+      <div class="row">
+        <div class="col-xs-4">
+          <div class="panel panel-default admin-panel incoming-panel">
+            <div class="panel-body accept-body">
+              <h3 class="accept-job-panel">Accept Incoming Jobs</h3>
+              <center><a href="/api/accept" type="button" class="btn btn-default admin-btn">Start</a></center>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-4">
+          <div class="panel panel-default admin-panel view-panel">
+            <div class="panel-body accept-body">
+              <h3 class="accept-job-panel">View All Jobs</h3>
+              <center><a href="/api/jobs" type="button" class="btn btn-default admin-btn">Start</a></center>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-4">
+          <div class="panel panel-default admin-panel todo-panel">
+            <div class="panel-body">
+              <h2 id="heading">To Do</h2>
+              <div class='tasks'>
+              </div>
+              <div class="row">
+                <div class='col-xs-12'>
+                  <button class="add">
+                      <img class='plus' src='http://uxrepo.com/download.php?img=static/icon-sets/dripicons/svg/plus.svg&color=1E90FF'></img>
+                    </button>
+                  <div class="input-row">
+                    <input id="input-form" type="text" name="newTask" placeholder="Add a new task">
+                  </div>
+                </div>
+              </div>
+              <div class='completed'>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div> <!-- End WEBPAGE BODY -->
