--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,16 +1,28 @@
+<!--Navigation Bar-->
+  <nav class="navbar  navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+     </div>
   <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav" id="top-menu">
           <li><a href="/">HOME</a></li>
+
           <li><a href="#service">SERVICES</a></li>
           <li><a href="/contact">CONTACT</a></li>
         </ul>
 				<ul class="nav navbar-nav navbar-right admin-nav">
 					<!-- Login Button -->
-					<button type="submit" class="btn btn-primary" id="adminLogin" data-toggle="modal" data-delay = "50" data-target="#LoginModal">LOG IN<i class="fa fa-sign-in" aria-hidden="true" ></i></button>
+					<button type="submit" class="btn btn-primary" id="adminLogin" data-delay = "50" onclick="location.href = '/login'"> LOG IN <i class="fa fa-fa-key" aria-hidden="true" ></i></button>
 					<!-- User icon -->
-					<!-- <i class="fa fa-user-circle " id="userIcon" data-toggle="tooltip" data-placement="bottom" aria-hidden="true" title="User Profile" ></i> -->
-			 	</ul>
+				</ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav> <!--End Nav-->
@@ -34,36 +46,36 @@
 		      <hr class="featurette-divider">
 
 		      <div class="row featurette">
-		        <div class="col-md-7">
+		        <div class="col-md-7 service-feat">
 		          <h2 class="featurette-heading">Residential. <span class="text-muted">Keep your home protected.</span></h2>
 		          <p class="lead">Whether new or longtime homeowners, we can find the right choice for you to best protect your home. We offer lock repair and installation, alarm system installation, garage door locks, fencing & gate locks, and peephole installation</p>
 		        </div>
 		        <div class="col-md-5">
-		          <img class="featurette-image img-responsive center-block" src="images/keyinlock.jpeg" alt="A key in a lock">
+		          <img class="img-circle img-responsive center-block" src="images/keyinlock.jpeg" alt="A key in a lock">
 		        </div>
 		      </div>
 
 		      <hr class="featurette-divider">
 
 		      <div class="row featurette">
-		        <div class="col-md-7 col-md-push-5">
+		        <div class="col-md-7 col-md-push-5 service-feat">
 		          <h2 class="featurette-heading">Automotive. <span class="text-muted">Get driving sooner.</span></h2>
 		          <p class="lead">The unexpected happens, and lost or broken keys stop anyone's day. Our automotive services include emergency car lock outs, ignition repair & unlock, broken key extraction, and transponder chip key production. We're quick to respond and that way you, you can get back on the road sooner.</p>
 		        </div>
 		        <div class="col-md-5 col-md-pull-7">
-		          <img class="featurette-image img-responsive center-block" src="images/man-people-hand-driving-6097.jpg" alt= "A man handing a set of keys">
+		          <img class="img-circle img-responsive center-block" src="images/man-people-hand-driving-6097.jpg" alt= "A man handing a set of keys">
 		        </div>
 		      </div>
 
 		      <hr class="featurette-divider">
 
 		      <div class="row featurette">
-		        <div class="col-md-7">
+		        <div class="col-md-7 service-feat">
 		          <h2 class="featurette-heading">Commericial. <span class="text-muted">Secure your business.</span></h2>
 		          <p class="lead">Small business owners and large corporate offices alike need a way to ensure the security of their workspace. We offer safe installation, full service alarm installation, panic doors, file cabinet locks, access control systems</p>
 		        </div>
 		        <div class="col-md-5">
-		          <img class="featurette-image img-responsive center-block" src="images/doorlock.jpeg" alt="A heavy door lock system">
+		          <img class="img-circle img-responsive center-block" src="images/doorlock.jpeg" alt="A heavy door lock system">
 		        </div>
 		      </div>
 
@@ -80,62 +92,62 @@
 	</section> <!-- END SERVICES SECTION -->
 
 
-	<!-- services modal -->
-	<div class="modal fade" id="service-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
-	    aria-hidden="true">
-	    <div class="modal-dialog modal-lg">
-	        <div class="modal-content">
-	            <div class="modal-header">
-	                <button type="button" class="close" data-dismiss="modal" aria-hidden="true" style="color: #000">
-	                    ×</button>
-	                <h4 class="modal-title" id="services-modal-label">
-	                    REQUEST A SERVICE</h4>
-	            </div>
-	            <div class="modal-body">
-	                <div class="row reg-body">
-											<div class="col-md-12">
-												<form class="full-services-form">
-												  <div class="form-group">
-												    <label for="inputClient">Client Name</label>
-												    <input type="text" class="form-control service-form" id="inputClient" placeholder="Enter Full Name">
-												  </div>
-												  <div class="form-group">
-												    <label for="inputLocation">Location</label>
-												    <input type="text" class="form-control service-form" id="inputLocation" placeholder="e.g. Houston">
-												  </div>
-													<div class="form-group">
-												    <label for="inputContact">Contact Number</label>
-												    <input type="tel" class="form-control service-form" id="inputContact" placeholder="e.g. 555-555-5556">
-												  </div>
-													<div class="form-group">
-											      <label for="selService">Select Service (select one):</label>
-											      <select class="form-control chosen-select" id="services" name="services">
-															<option value=""></option>
-											        <option value="Residential">Residential</option>
-											        <option value="Automotive">Automotive</option>
-											        <option value="Commercial">Commercial</option>
-											      </select>
-											    </div>
-													<div class="form-group">
-											      <label for="selSpecific">Select Service (select one):</label>
-											      <select class="form-control chosen-select" id="specific" name="specific">
-											      </select>
-											    </div>
-													<div class="row">
-															<div class="col-sm-10">
-																	<button type="button" class="btn btn-primary btn-sm" id="submitRequest" data-dismiss="modal">
-																			Submit</button>
-																	<button type="button" class="btn btn-primary btn-sm" data-dismiss="modal">
-																			Cancel</button>
-															</div>
-													</div>
-												</form>
-											</div>
-	                </div> <!--End Row-->
-	            </div> <!--End Modal Body-->
-	        </div><!--End Modal Content-->
-	    </div> <!--End Modal Dialogue-->
-	</div> <!--End Modal-->
+  <!-- services modal -->
+  <div class="modal fade" id="service-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
+      aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+          <div class="modal-content custom-modal">
+              <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-hidden="true" style="color: #000">
+                      ×</button>
+                  <h4 class="modal-title" id="services-modal-label">
+                      REQUEST A SERVICE</h4>
+              </div>
+              <div class="modal-body">
+                  <div class="row reg-body">
+                      <div class="col-md-12">
+                        <form id="clientForm" action="" method="POST" class="full-services-form">
+                          <div class="form-group">
+                            <label class="modal-label" for="inputClient">Client Name</label>
+                            <input type="text" name = "client_name" class="form-control service-form" id="client_name" placeholder="Enter Full Name">
+                          </div>
+                          <div class="form-group">
+                            <label class="modal-label" for="inputLocation">Location</label>
+                            <input type="text" name="client_location" class="form-control service-form" id="client_location" placeholder="e.g. Houston">
+                          </div>
+                          <div class="form-group">
+                            <label class="modal-label" for="inputContact">Contact Number</label>
+                            <input type="tel" name="client_contact" class="form-control service-form" id="client_contact" placeholder="e.g. 555-555-5556">
+                          </div>
+                          <div class="form-group">
+                            <label class="modal-label" for="selService">Select Service (select one):</label>
+                            <select class="form-control chosen-select" id="services" name="services">
+                              <option value=""></option>
+                              <option value="Residential">Residential</option>
+                              <option value="Automotive">Automotive</option>
+                              <option value="Commercial">Commercial</option>
+                            </select>
+                          </div>
+                          <div class="form-group">
+                            <label class="modal-label" for="selSpecific">Select Service (select one):</label>
+                            <select class="form-control chosen-select" id="specific_service" name="specific_service">
+                            </select>
+                          </div>
+                          <div class="row">
+                              <div class="col-sm-10">
+                                  <button type="button" class="btn btn-default submitReq" id="submitRequest" data-dismiss="modal">
+                                      Submit</button>
+                                  <button type="button" class="btn btn-default submitReq" data-dismiss="modal">
+                                      Cancel</button>
+                              </div>
+                          </div>
+                        </form>
+                      </div>
+                  </div> <!--End Row-->
+              </div> <!--End Modal Body-->
+          </div><!--End Modal Content-->
+      </div> <!--End Modal Dialogue-->
+  </div> <!--End Modal-->
 
 	<section class="expect-section">
 		<div class="jumbotron expect-jumbotron">
@@ -229,199 +241,31 @@
 		</div> <!--End REVIEWS Jumbotron -->
 	</section> <!--END REVIEWS SECTION -->
 
-  	<section class="carousel-section">
-			<div class="jumbotron carousel-jumbotron">
-				<div class="container">
-					<div class="carousel">
-			       <div id="thumbnail-slider">
-			          <div class="inner">
-			              <ul class="dd">
-			                <li>
-			                  <img class="thumb" src="images/house.jpeg">
-			                </li>
-			                <li>
-			                  <img class="thumb" src="images/car.jpg">
-			                </li>
-			                <li>
-			                  <img class="thumb" src="images/makingkeys.jpeg">
-			                </li>
-			                <li>
-			                  <img class="thumb" src="images/company.jpeg">
-			                </li>
-			              </ul> <!--End of carousel images -->
-			          </div> <!-- End of innner class-->
-			       </div> <!-- End of Thumbnail-Slider -->
-			    </div> <!-- End of carousel -->
-    		</div> <!-- End container -->
-    	</div> <!-- End Jumbotron -->
-	</section> <!--End carousel section-->
-	<!-- Login modal -->
-	<section>
-
-		<div class="modal fade" id="LoginModal" tabindex="-1" role="dialog" aria-labelledby="myLoginModalLabel"
-		    aria-hidden="true">
-		    <div class="modal-dialog modal-lg">
-		        <div class="modal-content">
-		            <div class="modal-header">
-		                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-		                    ×</button>
-		                <h4 class="modal-title" id="myModalloginLabel">
-		                    ASAP-Locksmith </a></h4>
-		            </div>
-		            <div class="modal-body modal-body-login">
-		                <div class="row">
-		                    <div class="col-md-8" >
-		                        <!-- Nav tabs -->
-		                        <ul class="nav nav-tabs">
-		                            <li class="active"><a href="#Login" data-toggle="tab"> Login</a></li>
-		                        </ul>
-		                        <!-- Tab panes -->
-		                        <div class="tab-content">
-		                            <div class="tab-pane active" id="Login">
-		                                <form role="form" class="form-horizontal login-body">
-		                                <div class="form-group">
-		                                    <label for="userId" class="col-sm-2 control-label">
-		                                        User Id</label>
-		                                    <div class="col-sm-10">
-		                                        <input type="text" class="form-control" id="userId" placeholder="Email" />
-		                                    </div>
-		                                </div>
-		                                <div class="form-group">
-		                                    <label for="password" class="col-sm-2 control-label">
-		                                        Password</label>
-		                                    <div class="col-sm-10">
-		                                        <input type="password" class="form-control" id="password" placeholder="Password" />
-		                                    </div>
-		                                </div>
-		                                <div class="row">
-		                                    <div class="col-sm-2">
-		                                    </div>
-		                                    <div class="col-sm-10">
-		                                        <button type="submit" class="btn btn-primary btn-sm">
-		                                            Submit</button>
-		                                        <a href="javascript:;">Forgot your password?</a>
-		                                    </div>
-		                                </div>
-		                                </form>
-		                            </div>
-		                        </div>
-		                    </div>
-		                </div>
-		            </div>
-		        </div>
-		    </div>
-		</div>
-	</section> <!--End Login Modal-->
+  <section class="carousel-section">
+    <div class="jumbotron carousel-jumbotron">
+      <div class="container">
+        <div class="carousel">
+           <div id="thumbnail-slider">
+              <div class="inner">
+                  <ul class="dd">
+                    <li>
+                      <img class="thumb" src="images/house.jpeg">
+                    </li>
+                    <li>
+                      <img class="thumb" src="images/car.jpg">
+                    </li>
+                    <li>
+                      <img class="thumb" src="images/makingkeys.jpeg">
+                    </li>
+                    <li>
+                      <img class="thumb" src="images/company.jpeg">
+                    </li>
+                  </ul> <!--End of carousel images -->
+              </div> <!-- End of innner class-->
+           </div> <!-- End of Thumbnail-Slider -->
+        </div> <!-- End of carousel -->
+      </div> <!-- End container -->
+    </div> <!-- End Jumbotron -->
+  </section> <!--End carousel section-->
 
 </div> <!-- End WEBPAGE BODY -->
-
-<script>
-
-		var specifics = {
-				'Residential': ['Lock Repair', 'Lock Installation', 'Alarm System Installation', 'Garage Door Locks', 'Gates and Fencing Lock', 'Peephole Installation'],
-				'Automotive': ['Emergency Car Lockout', 'Ignition Repair', 'Ignition Unlock', 'Broken Key Extration', 'Transponder Chip Key Production'],
-				'Commercial': ['Safe Installation', 'Full Service Alarm Installation', 'Panic Doors','File Cabinet Locks', 'Access Control Systems'],
-		}
-
-		var $specifics = $('#specific');
-		$('#services').change(function () {
-				var services = $(this).val(), spcs = specifics[services] || [];
-
-				var html = $.map(spcs, function(spc){
-						return '<option value="' + spc + '">' + spc + '</option>'
-				}).join('');
-				$specifics.html(html);
-		});
-
-		// Capture the form inputs
-		$("#submitRequest").on("click", function(){
-			// Form validation
-			function validateForm() {
-			var isValid = true;
-			$('.service-form').each(function() {
-				if ( $(this).val() === '' )
-						isValid = false;
-			});
-			$('.chosen-select').each(function() {
-				if( $(this).val() === "")
-					isValid = false
-			})
-			return isValid;
-		}
-		// If all required fields are filled
-		if (validateForm() == true)
-		{
-			// Create an object for the user's data
-				var userData = {
-					name: $("#inputClient").val(),
-					location: $("#inputLocation").val(),
-					contact: $('#inputContact').val(),
-					service: $('#services').val(),
-					specific_service: $('#specific').val()
-				}
-				// // Grab the URL of the website
-				// var currentURL = window.location.origin;
-				// // AJAX post the data to the API.
-				// $.post(currentURL + "/api/jobs", userData, function(data){
-				//
-				// });
-				console.log(userData);
-				alert("Your request is being processed. Thank you!");
-				$('.full-services-form').trigger('reset');
-				$('#service-modal').modal('hide');
-
-		}
-		else
-		{
-			alert("Please fill out all fields before submitting!");
-		}
-			return false;
-		});
-
-		// // Cache selectors
-		// var lastId,
-		// 		topMenu = $("#top-menu"),
-		// 		topMenuHeight = topMenu.outerHeight()+15,
-		// 		// All list items
-		// 		menuItems = topMenu.find("a"),
-		// 		// Anchors corresponding to menu items
-		// 		scrollItems = menuItems.map(function(){
-		// 			var item = $($(this).attr("href"));
-		// 			if (item.length) { return item; }
-		// 		});
-		//
-		// // Bind click handler to menu items
-		// // so we can get a fancy scroll animation
-		// menuItems.click(function(e){
-		// 	var href = $(this).attr("href"),
-		// 			offsetTop = href === "#" ? 0 : $(href).offset().top-topMenuHeight+1;
-		// 	$('html, body').stop().animate({
-		// 			scrollTop: offsetTop
-		// 	}, 900);
-		// 	e.preventDefault();
-		// });
-		//
-		// // Bind to scroll
-		// $(window).scroll(function(){
-		// 	 // Get container scroll position
-		// 	 var fromTop = $(this).scrollTop()+topMenuHeight;
-		//
-		// 	 // Get id of current scroll item
-		// 	 var cur = scrollItems.map(function(){
-		// 		 if ($(this).offset().top < fromTop)
-		// 			 return this;
-		// 	 });
-		// 	 // Get the id of the current element
-		// 	 cur = cur[cur.length-1];
-		// 	 var id = cur && cur.length ? cur[0].id : "";
-		//
-		// 	 if (lastId !== id) {
-		// 			 lastId = id;
-		// 			 // Set/remove active class
-		// 			 menuItems
-		// 				 .parent().removeClass("active")
-		// 				 .end().filter("[href=#"+id+"]").parent().addClass("active");
-		// 	 }
-		// });
-
-</script>
