--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,13 +1,12 @@
-/*Body Styling*/
-body{
-  overflow-y: hidden;
-  background-color: #f2f2f2;
-}
-
 html {
   position: relative;
   min-height: 100%;
-    overflow-x: hidden;
+    /*overflow-x: hidden;*/
+}
+body {
+  /* Margin bottom by footer height */
+  background-color: #f2f2f2;
+  margin: 0px 0px 100px; /* bottom = footer height */
 }
 
 /*Nav Bar*/
@@ -35,17 +34,22 @@ html {
 }
 
 /* Admin login */
-#adminLogin {
+
+#adminLogin, #adminLogout{
   padding-left: 18px !important;
   padding-right: 18px !important;
   position: relative;
   margin-top: 10px;
   color: #9d9d9d;
   background-color: transparent !important;
-  border-color: #414c23;
+  border-color: #414c23 !important;
   border-style: solid;
   border-width: 2px;
-}   
+}
+
+#adminLogin:hover{
+  background-color: rgba(105,105,105, .8) !important;
+}
 
 .fa-user-circle:before {
     /*content: "\f2bd";*/
@@ -55,6 +59,34 @@ html {
     margin-left: 5px;
 }
 
+#loginModal{
+  width: 702px;
+  font-family: 'Quicksand', sans-serif;
+  font-size: 14px;
+  font-weight: 700;
+}
+#login-title{
+  font-family: 'Quicksand', sans-serif;
+  font-size: 20px;
+}
+
+#login-content{
+  border-style: solid;
+  border-color: #9d9d9d;
+  border-width: 2px;
+}
+
+.form-horizontal{
+  padding-top: 15px;
+}
+
+.loginLbl {
+    /*position: relative;*/
+    top: -2px;
+    /*padding-left: 180px;*/
+}
+
+/**/
 /*Main Jumbotron*/
 .main-jumbotron{
   height: 650px;
@@ -108,22 +140,66 @@ html {
   font-size: 18px !important;
 }
 
+.submitReq{
+  color: #fff;
+  background-color: #657539;
+}
+
+.submitReq:hover{
+  background-color: #53602d;
+  color: #fff;
+}
+
+.submitReq:active{
+  background-color: #414c23 !important;
+  color: #fff !important;
+}
+
+.custom-modal{
+  width: 93%;
+  height: 510px !important;
+  position: relative;
+    left: 5%;
+}
+
+.full-services-form{
+  width: 96%;
+  position: relative;
+    left: 2%;
+    top: 9px;
+
+}
+
 .jumbotron{
   margin-bottom: 0px !important;
+}
+
+.modal-label{
+  position: inherit !important;
+  top: inherit !important;
+  padding-left: 0 !important;
 }
 
 .services-jumbotron{
   background-color: transparent !important;
   background-image: url(../images/absurditytile.png);
   background-repeat: repeat;
+
 }
 
+.report-jumbotron{
+  background-color: transparent !important;
+  background-image: url(../images/absurditytile.png);
+  background-repeat: repeat;
+  position: relative;
+  left:10px;
+}
 .service-header{
   text-align: center;
   margin-top: 30px;
   padding-bottom: 15px;
   font-size: 48px;
-  font-family: 'Libre Franklin', sans-serif;
+  font-family: 'Candal', sans-serif;
   font-weight: bold;
 }
 
@@ -169,6 +245,11 @@ html {
   padding: 20px;
   position: relative;
   top: 3px;
+}
+
+.service-feat{
+  position: relative;
+  top: 25px;
 }
 
 /*Reviews Section*/
@@ -219,7 +300,8 @@ html {
 
 /*Carousel Section*/
 .carousel-section{
-  margin-bottom: 50px;
+  position: relative;
+    top: 50px;
 }
 .thumb{
   height: 500px;
@@ -320,27 +402,251 @@ html {
 #thumbnail-slider-pause-play {display:none;} /*.pause*/
 #thumbnail-slider-prev, #thumbnail-slider-next {display:none;}
 
-/*Sticky Footer*/
+/*Admin Page Styling*/
+.admin-jumbo{
+  margin-bottom: 70px !important;
+  height: 470px;
+  background: url(../images/woodkeys.jpg);
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
 
-html {
+.admin-cont{
+  width: 93% !important;
+  padding-left: 0px !important;
+  padding-right: 0px !important;
+}
+.admin-header{
+  /*text-align: center;*/
+  font-family: 'Russo One', sans-serif;
+  color: #fff !important;
+}
+
+.admin-text{
+  color: #fff;
+  font-family: 'Quicksand', cursive;
+  width: 60%;
+}
+
+.admin-page{
   position: relative;
-  min-height: 100%;
+  top: 60px;
+ }
+
+.admin-panel {
+    margin-left: 0px !important;
+    margin-top: 0px !important;
+    border-radius: 3px !important;
+    background-color: #fff !important;
+    height: 350px;
+    margin-bottom: 20px;
+  }
+
+.incoming-panel{
+  background-image: url(../images/cargear.jpeg);
+  background-size: 100%;
 }
-body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+
+.view-panel{
+background-image: url(../images/door.jpeg);
+background-size: 100%;
 }
+
+.todo-panel{
+  background-image: url(../images/lockdoor.jpeg);
+  background-size: 100%;
+}
+.admin-title {
+    font-size: 20px !important;
+    font-family: 'Quicksand' !important;
+    text-align: center !important;
+    /*margin-left: 0px !important;*/
+  }
+
+.accept-job-panel {
+  font-family: 'Candal',cursive;
+  text-align: center;
+  margin-bottom: 20px;
+  color: #fff;
+}
+
+.accept-body{
+  position: relative;
+  top: 21%;
+}
+
+.admin-btn{
+    line-height: 32px;
+    width: 140px;
+    color: #fff;
+    background-color: #657539;
+    font-size: 18px;
+    padding: 5px;
+}
+
+.admin-btn:hover{
+    background-color: #53602d;
+    color: #fff;
+    font-size: 18px;
+}
+
+.admin-btn:active{
+    background-color: #414c23 !important;
+    color: #fff !important;
+    font-size: 18px !important;
+}
+
+#heading {
+  text-align: center;
+  font-size: 20px;
+  font-family: 'Candal';
+}
+
+.to-do {
+  margin-top: 10px;
+}
+
+.check-button{
+  position: relative;
+  top: 3px;
+  left: -7px;
+}
+
+.check-btn {
+  width: 100%;
+  height: 30px;
+  background-color: #FF9999;
+  text-align: center;
+  border-style: none;
+  border-radius: 2px;
+  -webkit-box-shadow: 0 0 5px #AAA;
+  box-shadow: 0 0 5px #AAA;
+  font-family: 'Raleway', sans-serif;
+  margin-top: 10px;
+}
+
+.checkmark {
+  height: 24px;
+}
+
+.check-btn {
+  color: #555;
+  font-weight: bold;
+  margin-top: 5px;
+}
+
+.add {
+  background-color: white;
+  height: 30px;
+  width: 30px;
+  text-align: center;
+  -webkit-box-shadow: 0 0 5px #AAA;
+  box-shadow: 0 0 5px #AAA;
+  border-radius: 6px;
+  border-style: none;
+  margin-top: 10px;
+  float: left;
+}
+
+.add:active {
+  background-color: #EEE;
+}
+
+.plus {
+  height: 16px;
+  color: #0099FF;
+}
+
+input[type=text] {
+  width: 100%;
+  height: 30px;
+  border-radius: 2px;
+  -webkit-box-shadow: 0 0 5px #AAA;
+  box-shadow: 0 0 5px #AAA;
+  border: none;
+  padding-left: 5px;
+  font-family: 'Raleway', sans-serif;
+}
+.input-row {
+  margin-top: 10px;
+}
+
+#input-form {
+  float: right;
+  width: calc(100% - 40px);
+}
+
+/*Accept Page Styling*/
+.job-panel{
+  background-color: #fff !important;
+  width: 60% !important;
+  margin: auto !important;
+  margin-top: 55px !important;
+  margin-bottom: 40px !important;
+}
+
+.accept-row{
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
+
+.accept-form{
+text-align: center !important;
+}
+
+.accepting-btn{
+  position: relative;
+  top: -10.5px;
+}
+
+.ac-btn{
+    color: #fff;
+    background-color: #657539;
+}
+
+.ac-btn:hover{
+    background-color: #53602d;
+    color: #fff;
+}
+
+.ac-btn:active{
+    background-color: #414c23 !important;
+    color: #fff !important;
+}
+
+.accept-table-whole{
+  border: .5px solid #c5d6ba;
+}
+
+.table-head-accept{
+  background-color: #bad1a7;
+}
+
+.table-accept{
+  background-color: #e9f2e3;
+}
+
+.table-striped>tbody>tr:nth-child(odd)>td,
+.table-striped>tbody>tr:nth-child(odd)>th {
+   background-color: #fff;
+ }
+
+/*Sticky Footer*/
 .footer {
   position: absolute;
-  bottom: 0;
-  width: 100%;
+    left: 0px;
+    top: 100%;
+    bottom: 0px;
+    height: 134px;
+    width: 100%;
   background-color: #414c23;
 }
 
 .second-footer-container{
-  position: relative;
-  top: 55%;
+  position: absolute;
+    top: 97%;
   height: 90px;
+  line-height: 90px;
   background-color: #657539;
   width: 100%;
 }
@@ -365,12 +671,16 @@ body {
 }
 
 .fa-map-marker{
+  position: relative;
+  top: -12px;
   text-align: center;
   font-size: 19px;
   color: #fff;
 }
 
 .fa-envelope{
+  position: relative;
+  top: -2px;
   float: right;
   text-align: center;
   font-size: 17px;
@@ -386,61 +696,304 @@ body {
 
 }
 
+/*css for monthly report*/
+.filterable {
+    margin-top: 15px;
+}
+.filterable .panel-heading .pull-right {
+    margin-top: -20px;
+}
+.filterable .filters input[disabled] {
+    background-color: transparent;
+    border: none;
+    cursor: auto;
+    box-shadow: none;
+    padding: 0;
+    height: auto;
+}
+.filterable .filters input[disabled]::-webkit-input-placeholder {
+    color: #333;
+}
+.filterable .filters input[disabled]::-moz-placeholder {
+    color: #333;
+}
+.filterable .filters input[disabled]:-ms-input-placeholder {
+    color: #333;
+}
 
- #men1{
+
+.month-row{
+  position: relative;
+  left: 6px;
+  top: 35px;
+  color: black;
+}
+.month-heading{
+  background-color: #414c23 ! important;
+  /*border-color: #414c23 ! important;*/
+}
+
+.monthly-panel{
+  padding-bottom: 30px;
+  border-color:#414c23 ! important ;
+  position: relative;top: 30px;
+}
+#myTable_wrapper{
+  position: relative;
+  top: -39px;
+}
+#myTable_length{
+  position: relative;
+    top: 44px !important;
+    left: 350px !important;
+}
+#myTable_filter{
+  position: relative;
+  top: 41px !important;
+}
+#example_filter{
+  position: relative;
+    top: 48px;
+    color: black;
+}
+.btn-group{
+  position: absolute !important;
+  left: 17px !important;
+}
+
+#example_wrapper{
+      position: relative;
+    top: 26px;
+}
+#example_info{
+  position: relative;
+  color: black;
+  left: -240px;
+}
+.pagination>.active>a{
+  background-color: #414c23 ! important ;
+}
+.dataTables_empty{
+  color: black;
+}
+/*#myTable_info{
+  position: relative;
+  bottom: -74px !important;
+}
+#myTable_previous{
+   position: relative;
+  bottom: -74px !important;
+}
+#myTable_next{
+   position: relative;
+  bottom: -74px !important;
+}*/
+/*a{
+     position: relative;
+  bottom: -64px !important;
+}*/
+/*dataTables_wrapper .dataTables_paginate .paginate_button{
+  position: relative;
+  top: 63px !important;
+}*/
+label{
+  position: relative;
+  top: -40px;
+  padding-left: 180px;
+}
+.month-size{
+  position: relative;
+    top: 80px;
+    left: -149px;
+    width: 260px;
+    color: black;
+}
+.Monthly-panel-title{
+  position: relative;
+  font-size: 30px !important;
+  margin-left: -9px !important;
+  font-family: "" !important;
+  left: -85% !important;
+}
+.weekly-panel-title{
+  font-size: 30px !important;
+  font-family: "" !important;
+}
+/*CSS Style for view page*/
+.view-panel-title{
+  font-size: 30px !important;
+  margin-left: -9px !important;
+  font-family: "" !important;
+
+}
+
+.view-row{
+  position: relative;
+  left: 10px;
+  top: 58px;
+  color: black;
+}
+.view-jumbotron{
+  position: relative;
+  left: 1px;
+  height: 1000px;
+  top: 77px;
+  background-color: dimgrey;
+}
+/*css style for report date input form*/
+/*.btn1{
+  position: relative;
+  left: 213px !important;
+}*/
+/*label{
+  position: relative;
+  right: 215px;
+}*/
+.report-panel-title{
+  font-size: 30px !important;
+  margin-left: -9px !important;
+  font-family: "" !important;
+}
+.startDateLabel{
+  width: 200px;
+  left:56px;
+  position: relative;
+  top: 21px;
+  color: black;
+    white-space: nowrap;
+}
+.endDateLabel{
+  position: relative;
+  top: -147px;
+  left: -35%;
+  color: black;
+  white-space: nowrap;
+}
+.start-date-form{
+  position: relative;
+  left: 378px;
+  top: -10px;
+  width: 260px;
+}
+/*.end-date-form{
+  position: relative;
+  left: 740px;
+  top: -181px;
+  width: 260px;
+}*/
+.form-align{
+    position: relative;
+    top: -96px;
+    width: 260px;
+}
+.label-name{
+    position: relative;
+    top: 5px;
+}
+.button-report{
+    position: relative;
+    top: -56px;
+    left: 430px;
+    height: 30px;
+}
+.report-form-container{
+    position: relative;
+    top: 150px;
+    left: -319px;
+}
+.create{
+   position: relative;
+    top: -26px;
+    width: 260px;
+    left: 281px;
+    width: 212px;
+}
+.thWidth{
+  width: 150px;
+  color: black;
+
+  /*text-align: center;*/
+}
+.report-row{
+    position: relative;
+    left: 12px;
+    top: -43px;
+    color: black;
+}
+.Monthlytd{
+  text-align: left;
+  color:black;
+}
+  /*css for weekly report*/
+.view{
+   border-color:#414c23 ! important ;
+}
+  .weekly-panel{
+  position: relative;
+  top: -73px;
+  padding-bottom: 30px;
+  border-color:#414c23 ! important ;
+  }
+  .end-date-form{
+position: relative;
+left: 775px;
+top: -181px;
+width: 260px;
+  }
+  .dropdown-menu > .active > a {
+background-color: #414c23 ! important ;
+  }
 
 
-    background-color:#f2f2f2 ;
-    width:465px;
-    padding:20px;
-    margin: 50px auto;    
-    margin-left: 100px;
-    border: 3px solid #657539 ;
-    -moz-border-radius:15px;
-    -webkit-border-radius:15px;
-    border-radius:15px;
-    position:relative;
+#menu1{
+  background-color:#f2f2f2 ;
+  width:465px;
+  padding:20px;
+  margin: 50px auto;
+  margin-left: 100px;
+  border: 3px solid #657539 ;
+  -moz-border-radius:15px;
+  -webkit-border-radius:15px;
+  border-radius:15px;
+  position:relative;
 
  }
 
-
- 
-
-
-h3 {
+.form1{
+  margin-top: 15px;
+}
+.contact-text {
   font-size: 30px;
-  font-family: 'Lobster Two', cursive;
+  font-family: 'Poppins', sans-serif;
   margin-bottom: 20px;
+  margin-top: 65px;
   margin-left: 150px;
 
 }
 
+.contact-panel{
 
-.panel{
-  margin-left: 150px;
+  margin-left: 100px;
   margin-top: 60px;
-  border-radius:15px;
+  border: none;
   background-color: transparent;
-
 }
 
 #bud{
-
+  font-family: 'Quicksand', sans-serif;
+  font-size: 30px;
+  font-weight: normal;
+  margin-top: 10  px;
   text-align: center;
 }
 
-
-.panel-title{
-
+.contact-title{
+  text-align: center;
   font-size: 30px;
-  font-family: 'Lobster Two', cursive;
-  margin-left: 0px;
+  font-family: 'Poppins', sans-serif;
+  margin-left: -35px;
 
 }
-
-
-
-
 
 #first {
 padding-right: 30px;
@@ -449,23 +1002,18 @@ padding-top: 5px;
 
 }
 
-h5 {
+.contact-submit {
   margin-left: 8px;
   margin-top: 4px;
 
 }
 
+/* assign modal*/
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+.assign-head{
+ margin-top: 45px;
+ margin-left: 50px;
+}
+.assign-select{
+  margin-top: -10px;
+}
