--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -1,92 +1,104 @@
+<!--Navigation Bar-->
+<nav class="navbar  navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
+        <div class="collapse navbar-collapse" id="navbar-collapse">
+            <ul class="nav navbar-nav" id="top-menu">
+                <li><a href="/">HOME</a></li>
+                <li><a href="/#service">SERVICES</a></li>
+                <li><a href="/contact">CONTACT</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right admin-nav">
+                <!-- Login Button -->
+                <button type="submit" class="btn btn-primary" id="adminLogin" data-delay="50" onclick="location.href = '/login'"> LOG IN <i class="fa fa-sign-in" aria-hidden="true"></i></button>
+                <!-- User icon -->
+                <!-- <i class="fa fa-user-circle " id="userIcon" data-toggle="tooltip" data-placement="bottom" aria-hidden="true" title="User Profile" ></i> -->
+            </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container-fluid -->
+</nav>
+<!--End Nav-->
+<!--Webpage Body-->
 <div class="body-webpage">
     <div class="jumbotron services-jumbotron">
-            <div class="container">
-            <div class="row">
-  
-      <div class="col-md-6 col-sm-12 col-xs-12"  id ="men1">
-        <div class="navbar-header " >
-        <h3> Contact Us </h3>
+        <div class="container">
+            <div class="row big-row">
+                <div class="col-md-6 col-sm-12 col-xs-12" id="men1">
+                    <div class="navbar-header ">
+                        <h3 class="contact-text"> Contact Us </h3>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <form class="form1">
+                                <div class="form-group">
+                                    <label class="modal-label" for="exampleInputName">Name</label>
+                                    <input type="name" class="form-control" id="exampleInputName1" aria-describedby="emailHelp" placeholder="John Smith">
+                                </div>
+                                <div class="form-group">
+                                    <label class="modal-label" for="exampleInputEmail1">Email address</label>
+                                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                                </div>
+                                <div class="form-group ">
+                                    <label class="modal-label" for="example-tel-input">Telephone</label>
+                                    <input class="form-control" type="tel" placeholder="1-(555)-555-5555" id="example-tel-input">
+                                </div>
+                                <div class="form-group">
+                                    <label class="modal-label" for="exampleTextarea">Message</label>
+                                    <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
+                                </div>
+                                <div class="form-group">
+                                    <label class="modal-label" for="exampleInputFile">File input</label>
+                                    <input type="file" class="form-control-file" id="exampleInputFile" aria-describedby="fileHelp">
+                                    <small id="fileHelp" class="form-text text-muted"></small>
+                                </div>
+                                <button type="submit" id="first" class="btn btn-success">
+                                    <h5 class="contact-submit">Submit</h5></button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <!-- location section-->
+                <div class="col-md-4 col-sm-12 col-xs-12" id="three">
+                    <div class="panel panel-white contact-panel">
+                        <div class="panel-heading">
+                            <h3 class="panel-title text-center contact-title">Locations</h3>
+                        </div>
+                        <div class="panel-body" id="bud">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <h6><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Houston </h6>
+                                    <h6><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> 1-800-212-7888 </h6>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <h6><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Dallas/Fort Worth </h6>
+                                    <h6><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> 1-800-212-7888 </h6>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <h6><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Houston </h6>
+                                    <h6><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> 1-800-212-7888 </h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-          <div class="row">
-           <div class="col-md-12">
-            <form class = "form1">
-              <div class="form-group">
-              <label for="exampleInputName">Name</label>
-              <input type="name" class="form-control" id="exampleInputName1" aria-describedby="emailHelp"   placeholder="John Smith">
-             </div>
-              <div class="form-group">
-              <label for="exampleInputEmail1">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-              </div>
-              <div class="form-group ">
-              <label for="example-tel-input">Telephone</label>
-              <input class="form-control" type="tel" placeholder="1-(555)-555-5555" id="example-tel-input">
-              </div>
-              <div class="form-group">
-              <label for="exampleTextarea">Message</label>
-              <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
-              </div>
-              <div class="form-group">
-              <label for="exampleInputFile">File input</label>
-              <input type="file" class="form-control-file" id="exampleInputFile" aria-describedby="fileHelp">
-              <small id="fileHelp" class="form-text text-muted"></small>
-              </div>
-              <button type="submit"  id = "first" class="btn btn-success"><h5>Submit</h5  ></button>
-            </form>
-           </div>
-         </div>
-       </div>
-             
-
-
-
-  <!-- Connect with me section-->
-    
-    <div class="col-md-4 col-sm-12 col-xs-12" id="three">
-         <div class="panel panel-white">
-          <div class="panel-heading">
-         <h3 class="panel-title text-center">Locations</h3>
-         </div>
-        
-          <div class="panel-body" id = "bud">
-
-          <div class="row">
-          
-          <div class="col-md-12">
-
-         <h6><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Houston </h6>
-
-          <h6><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> 1-800-212-7888 </h6>
-
-          </div>
-          </div>
-          <div class="row">
-          
-          <div class="col-md-12">
-
-         <h6><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Dallas/Fort Worth </h6>
-
-          <h6><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> 1-800-212-7888 </h6>
-
-          </div>
-          </div>
-          <div class="row">
-          
-          <div class="col-md-12">
-
-         <h6><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Houston </h6>
-
-          <h6><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> 1-800-212-7888 </h6>
-
-          </div>
-
-
-          </div>
-          </div>
-        </div>
-        
-         </div>
-       </div>
+        <!--END of container-->
     </div>
-    </div>
-    </div>
+    <!--END of Jumbotron-->
+</div>
+<!--END of web Body-->
