--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,49 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-
-	<meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title>ASAP Locksmith</title>
 
  	<!-- Icons -->
  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
- 	<!--JQuery Library-->
- 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
- 	<!--Bootstrap CSS-->
- 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
- 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
- 	<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
- 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <!-- Personal CSS style -->
-  <link rel="stylesheet" type="text/css" href="/css/style.css">
-	<!--Fonts-->
- 	<link href="https://fonts.googleapis.com/css?family=Buda:300|Nixie+One|Quicksand|Rosarivo|Rubik+Mono+One" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Candal|Passion+One|Poppins|Russo+One|Libre+Franklin" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Kumar+One+Outline|Lobster+Two" rel="stylesheet">
+    <!--JQuery Library -->
+    <!-- :Note: Dont add JQuery Library multiple times,it will mess with login & signup pages MODAL-->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!--Bootstrap CSS-->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <!-- file for date picker and table data -->
+	 	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap.css"/>
+		<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/1.4.2/css/buttons.bootstrap.css"/>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/2.5.0/jszip.js"></script>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.32/pdfmake.js"></script>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.32/vfs_fonts.js"></script>
+		<script type="text/javascript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.js"></script>
+		<script type="text/javascript" src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap.js"></script>
+		<script type="text/javascript" src="https://cdn.datatables.net/buttons/1.4.2/js/dataTables.buttons.js"></script>
+		<script type="text/javascript" src="https://cdn.datatables.net/buttons/1.4.2/js/buttons.bootstrap.js"></script>
+		<script type="text/javascript" src="https://cdn.datatables.net/buttons/1.4.2/js/buttons.colVis.js"></script>
+		<script type="text/javascript" src="https://cdn.datatables.net/buttons/1.4.2/js/buttons.flash.js"></script>
+		<script type="text/javascript" src="https://cdn.datatables.net/buttons/1.4.2/js/buttons.html5.js"></script>
 
- 	<!--Moment JS file-->
- 	<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
-
+    <!-- Personal CSS style -->
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <!--Fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Buda:300|Nixie+One|Quicksand|Rosarivo|Rubik+Mono+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Candal|Passion+One|Poppins|Russo+One|Libre+Franklin" rel="stylesheet">
+    <!--Moment JS file-->
+    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+    <script src="http://code.jquery.com/ui/1.11.0/jquery-ui.js"></script>
 </head>
 
 <body>
 
-<!--Navigation Bar-->
-  <nav class="navbar  navbar-inverse navbar-fixed-top">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-     </div>
-
-    
 
 		{{{ body }}}
 
@@ -65,8 +60,13 @@
 			</div>
 		</footer>
 
-    <script src="/js/script.js"></script>
-		<script src="/js/home.js"></script>
+  <script type="text/javascript" src="js/accept.js"></script>
+	<script type="text/javascript" src="js/signup.js"></script>
+	<script type="text/javascript" src="js/assign.js"></script>
+	<script type="text/javascript" src="js/script.js"></script>
+	<script type="text/javascript" src="js/login.js"></script>
+	<script type="text/javascript" src="js/adminfront.js"></script>
+
 </body>
 
 </html>
